# jReadWrite

./: CMakeLists.txt  jRead.h  jWrite.h
source/: jRead.c  jWrite.c
test/: CMakeLists.txt  test-jread.c  test-jwrite.c
